--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "auto-changelog",
-  "version": "0.0.1",
+  "version": "1.7.1",
   "description": "Command line tool for generating a changelog from git tags and commit history",
   "bin": {
     "auto-changelog": "./lib/index.js"
   },
+  "engines": {
+    "git": ">=1.6.1"
+  },
   "scripts": {
     "lint": "standard --verbose | snazzy",
-    "test": "mocha test --compilers js:babel-core/register",
-    "clean": "rm -rf lib",
+    "lint-markdown": "markdownlint test/data/*.md",
+    "test": "cross-env NODE_ENV=test nyc mocha test",
+    "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
+    "clean": "rm -rf lib coverage",
     "build": "babel src -d lib",
-    "prepublish": "npm run build",
-    "postpublish": "npm run clean"
+    "preversion": "npm run lint && npm run test",
+    "version": "babel-node src/index.js --package && git add CHANGELOG.md",
+    "prepublish": "npm run clean && npm run build",
+    "postpublish": "npm run clean",
+    "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
   },
   "author": "Pete Cook <pete@cookpete.com> (http://github.com/cookpete)",
   "homepage": "https://github.com/CookPete/auto-changelog",
@@ -34,28 +42,67 @@
     "commits",
     "history"
   ],
-  "license": "CC0-1.0",
+  "license": "MIT",
   "dependencies": {
-    "array.prototype.find": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
+    "commander": "^2.9.0",
+    "handlebars": "^4.0.11",
+    "lodash.uniqby": "^4.7.0",
+    "parse-github-url": "^1.0.1",
     "semver": "^5.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.6",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "chai": "^3.4.1",
-    "mocha": "^2.3.4",
-    "snazzy": "^2.0.1"
+    "babel-eslint": "^8.0.1",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-rewire": "^1.1.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "codecov": "^3.0.0",
+    "cross-env": "^5.1.0",
+    "markdownlint-cli": "^0.10.0",
+    "mocha": "^5.0.0",
+    "nyc": "^11.2.1",
+    "snazzy": "^7.0.0",
+    "standard": "^11.0.0"
   },
   "babel": {
     "presets": [
-      "es2015",
-      "stage-0"
-    ]
+      "env",
+      "stage-3"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "istanbul",
+          "rewire"
+        ]
+      }
+    }
   },
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "ignore": [
+      "test/data/"
+    ]
+  },
+  "nyc": {
+    "all": true,
+    "include": "src",
+    "exclude": "src/index.js",
+    "sourceMap": false,
+    "instrument": false,
+    "report-dir": "./coverage",
+    "temp-directory": "./coverage/.nyc_output",
+    "require": [
+      "babel-polyfill",
+      "babel-register"
+    ],
+    "reporter": [
+      "text",
+      "html"
+    ]
   }
 }
