--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "license": "CC0-1.0",
   "dependencies": {
     "array.prototype.find": "^1.0.0",
+    "commander": "^2.9.0",
     "semver": "^5.1.0"
   },
   "devDependencies": {
