--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha test --compilers js:babel-core/register",
     "clean": "rm -rf lib",
     "build": "babel src -d lib",
+    "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package --template compact; git add CHANGELOG.md",
     "prepublish": "npm run build",
     "postpublish": "npm run clean"
