--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
   ],
   "license": "CC0-1.0",
   "dependencies": {
-    "array.prototype.find": "^1.0.0",
+    "array.prototype.find": "^2.0.0",
     "commander": "^2.9.0",
     "semver": "^5.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^6.0.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
-    "snazzy": "^2.0.1"
+    "snazzy": "^4.0.0",
+    "standard": "^7.1.2"
   },
   "babel": {
     "presets": [
