--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "array.prototype.find": "^2.0.0",
     "commander": "^2.9.0",
+    "parse-github-url": "^0.3.2",
     "semver": "^5.1.0"
   },
   "devDependencies": {
