--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
     "babel-eslint": "^8.0.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^4.1.2",
     "mocha": "^3.0.2",
@@ -56,7 +56,7 @@
   },
   "babel": {
     "presets": [
-      "es2015",
+      "env",
       "stage-0"
     ]
   },
