--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-  - "4.1"
-  - "4.0"
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
+  - latest
+  - 8
+  - 7
+  - 6
+  - 5
+  - 4
 script:
   - npm run lint
   - npm run test
