--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "lint": "standard --verbose | snazzy",
-    "test": "mocha test --compilers js:babel-core/register",
+    "test": "nyc mocha test --compilers js:babel-core/register",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "clean": "rm -rf lib",
     "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
@@ -50,7 +51,9 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^4.1.2",
+    "codecov": "^2.3.0",
     "mocha": "^3.0.2",
+    "nyc": "^11.2.1",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
