--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ node_js:
   - 6
   - 5
   - 4
+cache:
+  yarn: true
+  directories:
+    - node_modules
 script:
   - npm run lint
   - npm run test
