Keep coverage files inside test directory

--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "include": "src",
     "sourceMap": false,
     "instrument": false,
-    "temp-directory": "./coverage/.nyc_output",
+    "report-dir": "./test/coverage",
+    "temp-directory": "./test/coverage/.nyc_output",
     "require": [
       "babel-polyfill",
       "babel-register"
