--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
     "prepublish": "npm run clean && npm run build",
-    "postpublish": "npm run clean"
+    "postpublish": "npm run clean",
+    "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
   },
   "author": "Pete Cook <pete@cookpete.com> (http://github.com/cookpete)",
   "homepage": "https://github.com/CookPete/auto-changelog",
