--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
     "parse-github-url": "^1.0.1",
-    "semver": "^5.1.0"
+    "semver": "^5.1.0",
+    "moment": "^2.20.1"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
