--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "commander": "^2.9.0",
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
+    "lodash.uniqby": "^4.7.0",
     "parse-github-url": "^1.0.1",
     "semver": "^5.1.0"
   },
