--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "lint": "standard --verbose | snazzy",
     "test": "cross-env NODE_ENV=test nyc mocha test",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "clean": "rm -rf lib test/coverage",
+    "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
+    "clean": "rm -rf lib coverage",
     "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
@@ -89,8 +89,8 @@
     "exclude": "src/index.js",
     "sourceMap": false,
     "instrument": false,
-    "report-dir": "./test/coverage",
-    "temp-directory": "./test/coverage/.nyc_output",
+    "report-dir": "./coverage",
+    "temp-directory": "./coverage/.nyc_output",
     "require": [
       "babel-polyfill",
       "babel-register"
