--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "lint": "standard --verbose | snazzy",
+    "lint-markdown": "markdownlint test/data/*.md",
     "test": "cross-env NODE_ENV=test nyc mocha test",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "clean": "rm -rf lib coverage",
@@ -61,6 +62,7 @@
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
     "cross-env": "^5.1.0",
+    "markdownlint-cli": "^0.10.0",
     "mocha": "^5.0.0",
     "nyc": "^11.2.1",
     "snazzy": "^7.0.0",
