Add README.md to lint checks
Because why not?

--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -3,5 +3,7 @@
   "line-length": false,
   "first-header-h1": false,
   "first-line-h1": false,
-  "no-duplicate-header": false
+  "no-duplicate-header": false,
+  "heading-increment": false,
+  "no-trailing-punctuation": false
 }
