--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "lint": "standard --verbose | snazzy",
-    "lint-markdown": "markdownlint test/data/*.md",
+    "lint-markdown": "markdownlint README.md test/data/*.md",
     "test": "cross-env NODE_ENV=test nyc mocha test",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "clean": "rm -rf lib coverage",
