--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
     "cross-env": "^5.1.0",
-    "markdownlint-cli": "^0.12.0",
+    "markdownlint-cli": "^0.13.0",
     "mocha": "^5.0.0",
-    "nyc": "^12.0.2",
-    "snazzy": "^7.0.0",
-    "standard": "^11.0.0"
+    "nyc": "^13.1.0",
+    "snazzy": "^8.0.0",
+    "standard": "^12.0.1"
   },
   "babel": {
     "presets": [
@@ -93,7 +93,7 @@
     "sourceMap": false,
     "instrument": false,
     "report-dir": "./coverage",
-    "temp-directory": "./coverage/.nyc_output",
+    "temp-dir": "./coverage/.nyc_output",
     "require": [
       "babel-polyfill",
       "babel-register"
