--- a/package.json
+++ b/package.json
@@ -41,35 +41,35 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "commander": "^2.9.0",
-    "handlebars": "^4.0.11",
+    "@babel/polyfill": "^7.0.0",
+    "commander": "^2.19.0",
+    "handlebars": "^4.0.12",
     "lodash.uniqby": "^4.7.0",
-    "node-fetch": "^2.2.0",
-    "parse-github-url": "^1.0.1",
-    "semver": "^5.1.0"
+    "node-fetch": "^2.3.0",
+    "parse-github-url": "^1.0.2",
+    "semver": "^5.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "codecov": "^3.0.0",
-    "cross-env": "^5.1.0",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-rewire": "^1.2.0",
+    "chai": "^4.2.0",
+    "codecov": "^3.1.0",
+    "cross-env": "^5.2.0",
     "markdownlint-cli": "^0.13.0",
-    "mocha": "^5.0.0",
+    "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
   "babel": {
     "presets": [
-      "env",
-      "stage-3"
+      "@babel/preset-env"
     ],
     "env": {
       "test": {
@@ -95,8 +95,8 @@
     "report-dir": "./coverage",
     "temp-dir": "./coverage/.nyc_output",
     "require": [
-      "babel-polyfill",
-      "babel-register"
+      "@babel/polyfill",
+      "@babel/register"
     ],
     "reporter": [
       "text",
