--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-markdown": "markdownlint README.md test/data/*.md",
     "test": "cross-env NODE_ENV=test nyc mocha test",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
-    "clean": "rm -rf lib coverage",
+    "clean": "rimraf lib coverage",
     "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
@@ -65,15 +65,19 @@
     "markdownlint-cli": "^0.15.0",
     "mocha": "^6.1.2",
     "nyc": "^13.1.0",
+    "rimraf": "^2.6.3",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
   "babel": {
     "presets": [
-      ["@babel/preset-env", {
-        "useBuiltIns": "usage",
-        "corejs": 3
-      }]
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3
+        }
+      ]
     ],
     "env": {
       "test": {
