--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
-    "prepublish": "npm run clean && npm run build",
-    "postpublish": "npm run clean",
+    "prepublishOnly": "npm run clean && npm run build",
     "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
   },
   "author": "Pete Cook <pete@cookpete.com> (http://github.com/cookpete)",
