--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postpublish": "npm run clean",
     "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
   },
-  "author": "Pete Cook <pete@cookpete.com> (http://github.com/cookpete)",
+  "author": "Pete Cook <pete@cookpete.com> (https://github.com/cookpete)",
   "homepage": "https://github.com/CookPete/auto-changelog",
   "repository": {
     "type": "git",
