--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "lint-markdown": "markdownlint README.md test/data/*.md",
     "test": "cross-env NODE_ENV=test nyc mocha test",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
-    "clean": "rm -rf lib coverage",
+    "clean": "rimraf lib coverage",
     "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
-    "prepublish": "npm run clean && npm run build",
-    "postpublish": "npm run clean",
+    "prepublishOnly": "npm run clean && npm run build",
     "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
   },
   "author": "Pete Cook <pete@cookpete.com> (https://github.com/cookpete)",
@@ -42,35 +41,42 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@babel/polyfill": "^7.4.3",
     "commander": "^2.20.0",
-    "handlebars": "^4.0.12",
+    "core-js": "^3.1.4",
+    "handlebars": "^4.1.2",
     "lodash.uniqby": "^4.7.0",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "parse-github-url": "^1.0.2",
-    "semver": "^6.0.0"
+    "semver": "^6.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/register": "^7.4.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-istanbul": "^5.1.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "babel-eslint": "^10.0.2",
+    "babel-plugin-istanbul": "^5.1.4",
     "babel-plugin-rewire": "^1.2.0",
     "chai": "^4.2.0",
-    "codecov": "^3.3.0",
+    "codecov": "^3.5.0",
     "cross-env": "^5.2.0",
-    "markdownlint-cli": "^0.15.0",
-    "mocha": "^6.1.2",
-    "nyc": "^13.1.0",
+    "markdownlint-cli": "^0.17.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3
+        }
+      ]
     ],
     "env": {
       "test": {
@@ -96,7 +102,7 @@
     "report-dir": "./coverage",
     "temp-dir": "./coverage/.nyc_output",
     "require": [
-      "@babel/polyfill",
+      "core-js/stable",
       "@babel/register"
     ],
     "reporter": [
