--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-changelog",
-  "version": "1.16.0",
+  "version": "1.17.0",
   "description": "Command line tool for generating a changelog from git tags and commit history",
   "main": "./lib/index.js",
   "bin": {
@@ -14,7 +14,7 @@
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "clean": "rimraf lib coverage",
     "build": "babel src -d lib",
-    "preversion": "npm run lint && npm run test",
+    "preversion": "npm run lint",
     "version": "babel-node src/index.js --package && git add CHANGELOG.md",
     "prepublishOnly": "npm run clean && npm run build",
     "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
