--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "auto-changelog",
   "version": "1.16.4",
   "description": "Command line tool for generating a changelog from git tags and commit history",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "bin": {
-    "auto-changelog": "./lib/index.js"
+    "auto-changelog": "./src/index.js"
   },
-  "engines" : {
-    "node" : ">=7.6"
+  "engines": {
+    "node": ">=8.3"
   },
   "scripts": {
     "lint": "standard --verbose | snazzy",
@@ -16,12 +16,9 @@
     "test": "cross-env NODE_ENV=test mocha -r @babel/register test",
     "test-coverage": "cross-env NODE_ENV=test nyc mocha test",
     "report-coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
-    "clean": "rimraf lib coverage",
-    "build": "babel src -d lib",
     "preversion": "npm run lint && npm run test",
-    "version": "babel-node src/index.js --package && git add CHANGELOG.md",
-    "prepublishOnly": "npm run clean && npm run build",
-    "generate-test-data": "cross-env NODE_ENV=test babel-node scripts/generate-test-data.js"
+    "version": "node src/index.js --package && git add CHANGELOG.md",
+    "generate-test-data": "cross-env NODE_ENV=test node scripts/generate-test-data.js"
   },
   "author": "Pete Cook <pete@cookpete.com> (https://github.com/cookpete)",
   "homepage": "https://github.com/CookPete/auto-changelog",
@@ -47,21 +44,15 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^5.0.0",
-    "core-js": "^3.6.4",
     "handlebars": "^4.7.3",
     "lodash.uniqby": "^4.7.0",
     "node-fetch": "^2.6.0",
     "parse-github-url": "^1.0.2",
-    "regenerator-runtime": "^0.13.5",
     "semver": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-rewire": "^1.2.0",
     "chai": "^4.2.0",
@@ -70,20 +61,10 @@
     "markdownlint-cli": "^0.22.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.0",
-    "rimraf": "^3.0.2",
     "snazzy": "^8.0.0",
     "standard": "^14.3.3"
   },
   "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": "usage",
-          "corejs": 3
-        }
-      ]
-    ],
     "env": {
       "test": {
         "plugins": [
@@ -94,7 +75,6 @@
     }
   },
   "standard": {
-    "parser": "babel-eslint",
     "ignore": [
       "test/data/"
     ]
@@ -108,7 +88,6 @@
     "report-dir": "./coverage",
     "temp-dir": "./coverage/.nyc_output",
     "require": [
-      "core-js/stable",
       "@babel/register"
     ],
     "reporter": [
