add github class

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "commander": "^5.0.0",
     "handlebars": "^4.7.3",
     "lodash.uniqby": "^4.7.0",
+    "make-fetch-happen": "^8.0.7",
     "node-fetch": "^2.6.0",
     "parse-github-url": "^1.0.2",
     "semver": "^6.3.0"
