--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "commander": "^7.2.0",
     "handlebars": "^4.7.7",
+    "import-cwd": "^3.0.0",
     "node-fetch": "^2.6.1",
     "parse-github-url": "^1.0.2",
     "semver": "^7.3.5"
